--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,9 @@
 # Front matter comment to ensure Jekyll properly reads file.
 ---
 
+<!DOCTYPE html>
+<html lang="en-us">
+
 {% include head.html %}
 
 <body class="subPageBody">
