--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,11 @@
   gtag('js', new Date());
 
   gtag('config', 'G-XHTLEE7LSS');
+	
+	<!-- Event snippet for Website traffic conversion page -->
+  gtag('event', 'conversion', {'send_to': 'AW-965523158/IQ0MCOfExq8DENbtsswD'});
+
+
 </script>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
