--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,7 @@
 	<base target="_blank">
 
 	<title class="pageTitle">{{ site.page_title }}</title>
+	<meta name = "title" content = "{{ site.page_title}}">
 	<meta name="description" content="{{ site.app_description }}">
 
 	<link rel="shortcut icon" href="{{ site.app_icon | relative_url }}">
