--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<base target="_blank">
 
-	<title class="pageTitle">{{ site.page_title }}</title>
+	<title class="pageTitle">"Silver and Gold Melt Prices at Your fingertips"</title>
 	<meta name = "title" content = "{{ site.page_title}}">
 	<meta name="description" content="{{ site.app_description }}">
 
