--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<base target="_blank">
-	<h1>"Silver & Gold Scrap Calculator"</h1>
+	<H1>"Silver & Gold Scrap Calculator"</H1>
 	<title class="pageTitle">"Silver and Gold Melt Prices at Your fingertips"</title>
 	<meta name = "title" content = "{{ site.page_title}}">
 	<meta name="description" content="{{ site.app_description }}">
